2006.363:
	- Update to libmseed 2.0rc1 + 2006.363.

2006.209: 
	- Remove -P option, packing after each block is now default.
	- Add -g option to specify a scaling factor and make the
	default scaling 8 which results in amplitude units of 125nV.
	- Add a warning message for when sample value truncation is
	occurring, only print once per input block.
	- Convert many long's to int's in MARS reading code to enable
	proper 64-bit compilation and operation.
	- Update to libmseed 1.8.  Includes memory leak fix.
	- Add gcc32, gcc32debug and gcc64debug targets to Makefile.
	
2006.201:
	- Correct message regarding output scaling, output is 100 nV.

2006.199:
	- Add -P option to pack data after each block is read in to
	minimize memory usage, allowing large file conversion.

2006.183: 1.0
	- Update to libmseed 1.7.

2005.300: 0.4
	- Update libmseed to 1.4.2.
	- Any input file prefixed with '@' is assumed to be a list file.
	- Default output file is now <inputfile>.mseed instead of stdout.
	- Pack data after reading each file.
	- Add option to buffer all data in memory before packing.
	- Remove signal handling, not needed.
	- Add man page.
	- Add Win32 Makefiles, test with Open Watcom 1.3.

2005.270: 0.3
	- Add EH[ZNE] preset mappings.	
	- Add custom channel number to channel codes mapping ability.
	- Add warning message that all samples have been scaled.
	- Update to libmseed 1.2.

2005.???: versions 0.1 and 0.2.