@@ -1,5 +1,7 @@
 2006.363:
 	- Update to libmseed 2.0rc1 + 2006.363.
+	- Convert all output to ms_log().
+	- Fix FPE when scaling is set to 0 (a useless value anyway).
 
 2006.209: 
 	- Remove -P option, packing after each block is now default.
